--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "base64-js": "^1.1.2",
     "store": "^1.3.20",
     "vue": "^1.0.21",
     "vue-resource": "^0.7.2",
-    "vue-router": "^0.7.13"
+    "vue-router": "^0.7.13",
+    "vue-strap": "^1.0.11",
+    "vue-tables": "^1.4.32"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
