--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "base64-js": "^1.1.2",
-    "jquery": "2.2.0",
+    "jquery": "^2.2.0",
     "store": "^1.3.20",
     "vue": "^1.0.21",
+    "vue-datetime-picker": "^0.2.1",
     "vue-resource": "^0.7.2",
     "vue-router": "^0.7.13",
     "vue-strap": "^1.0.11",
