--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "store": "^1.3.20",
     "vue": "^1.0.21",
     "vue-datetime-picker": "^0.2.1",
+    "vue-file-upload": "0.0.7",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vue-strap": "^1.0.11",
